--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <input 
                 type="text" 
                 placeholder="Enter your name" 
-                id="contact-name" 
+                id="contact-name"
+                autocomplete="off"
          />
         <span id="name-error"></span>
       </div>
@@ -28,6 +29,7 @@
               type="tel" 
               placeholder="123 456 7890" 
               id="contact-phone"
+              autocomplete="off"
         />
         <span id="phone-error"></span>
 
@@ -40,6 +42,7 @@
               type="email" 
               placeholder="Enter Email" 
               id="contact-email"
+              autocomplete="off"  
         />
             <span id="email-error"></span>
 
@@ -52,6 +55,7 @@
                   rows="5" 
                   placeholder="Enter your message"  
                   id="contact-message"
+                  autocomplete="off"  
 
         ></textarea>
             <span id="message-error"></span>
